apps/oxlint/src/snapshots/fixtures__overrides_env_globals_-c .oxlintrc.json .@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: -c .oxlintrc.json .
working directory: fixtures/overrides_env_globals
----------

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-global-assign.html\eslint(no-global-assign)]8;;\: Read-only global 'globalThis' should not be modified.
   ,-[src/test.js:2:1]
 1 | // for env detection
 2 | globalThis = 'abc';
   : ^^^^^|^^^^
   :      `-- Read-only global 'globalThis' should not be modified.
 3 | $ = 'abc';
   `----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-global-assign.html\eslint(no-global-assign)]8;;\: Read-only global 'globalThis' should not be modified.
   ,-[test.js:2:1]
 1 | // for env detection
 2 | globalThis = 'abc';
   : ^^^^^|^^^^
   :      `-- Read-only global 'globalThis' should not be modified.
 3 | $ = 'abc';
   `----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-global-assign.html\eslint(no-global-assign)]8;;\: Read-only global 'globalThis' should not be modified.
   ,-[test.ts:2:1]
 1 | // for env detection
 2 | globalThis = 'abc';
   : ^^^^^|^^^^
   :      `-- Read-only global 'globalThis' should not be modified.
 3 | $ = 'abc';
   `----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-global-assign.html\eslint(no-global-assign)]8;;\: Read-only global '$' should not be modified.
   ,-[test.js:3:1]
 2 | globalThis = 'abc';
 3 | $ = 'abc';
   : |
   : `-- Read-only global '$' should not be modified.
 4 | 
   `----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-global-assign.html\eslint(no-global-assign)]8;;\: Read-only global 'Foo' should not be modified.
   ,-[test.js:6:1]
 5 | // for globals detection
 6 | Foo = 'readable';
   : ^|^
   :  `-- Read-only global 'Foo' should not be modified.
   `----

Found 5 warnings and 0 errors.
Finished in <variable>ms on 3 files with 97 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
