apps/oxlint/src/snapshots/fixtures__suppression_not_file_reporting_errors_@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/suppression_not_file_reporting_errors
----------

  x eslint(no-console): Unexpected console statement.
   ,-[folder_a/test.js:1:1]
 1 | console.log();
   : ^^^^^^^^^^^
 2 | console.log();
   `----
  help: Delete this console statement.

  x eslint(no-console): Unexpected console statement.
   ,-[folder_a/test.js:2:1]
 1 | console.log();
 2 | console.log();
   : ^^^^^^^^^^^
 3 | console.log();
   `----
  help: Delete this console statement.

  x eslint(no-console): Unexpected console statement.
   ,-[folder_a/test.js:3:1]
 2 | console.log();
 3 | console.log();
   : ^^^^^^^^^^^
   `----
  help: Delete this console statement.

  x eslint(no-console): Unexpected console statement.
   ,-[folder_b/test.js:1:1]
 1 | console.log();
   : ^^^^^^^^^^^
   `----
  help: Delete this console statement.

Found 0 warnings and 4 errors.
Finished in <variable>ms on 2 files with 56 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
